Ajustando consulta BKP pela lógica de módulos, e CSS

--- a/docs/erroCancelado.css
+++ b/docs/erroCancelado.css
@@ -6,8 +6,8 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f8d7da;
-    color: #721c24;
+    background-color: #ffc75e;
+    color: #642121;
 }
 
 .container {
