--- a/docs/style.css
+++ b/docs/style.css
@@ -1,7 +1,7 @@
 /* Estilos básicos para a página inicial e de resultados */
 body {
     font-family: 'Roboto', sans-serif;
-    background: linear-gradient(to right, #f0f0f0, #e0e0e0);
+    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0 );
     margin: 0;
     padding: 0;
     display: flex;
@@ -221,17 +221,21 @@ button:hover {
 
 
 footer {
-    background-color: #333;
-    color: white;
     text-align: center;
     padding: 8px;
-    border-top: 5px solid #444;
     position: fixed;
     bottom: 0;
     margin-top: auto;
     width: 100%;
     font-family: 'Roboto', sans-serif; /* Adiciona a fonte Roboto */
     font-weight: 300; /* Usa o peso leve da fonte */
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 8px;
+    border-top: 5px solid #444;
+    position: fixed;
+    width: 100%;
 }
 
 footer h3 {
