--- a/docs/style.css
+++ b/docs/style.css
@@ -1,301 +1,122 @@
-.image{
-    width: 30%;
-    display: flex;
-    margin-bottom: 3%;
-}
-
-/* Estilos básicos para a página inicial e de resultados */
+/* Estilos Globais */
 body {
-    font-family: 'Roboto', sans-serif;
-    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0 );
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    color: #333;
+    justify-content: space-between;
+    min-height: 100vh; /* Garante que o footer fique sempre no fim */
+    background-color: #f4f4f9;
 }
 
-.container, .result-container {
-    max-width: 800px;
-    width: 100%;
-    padding: 40px;
+/* Container centralizado */
+.container {
+    display: flex;
+    justify-content: space-around; /* Espaçamento entre a imagem e o formulário */
+    align-items: center;
+    flex-grow: 1; /* Ocupa o espaço disponível */
     background-color: #fff;
+    padding: 10px;
     border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.55);
-    margin-bottom: 40px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    margin: 50px auto;
+    width: 80%;
+}
+
+/* Estilo da Imagem */
+.image {
+    width: 20%; /* Ajuste o tamanho da imagem conforme necessário */
+}
+
+.image img {
+    max-width: 100%; /* Garante que a imagem não ultrapasse o container */
+    height: auto;
+}
+
+/* Centralizar e estilizar o formulário */
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+/* Campo de entrada de CNPJ */
+input[type="text"] {
+    width: 300px;
+    padding: 15px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
+/* Botão de consultar */
+button#consultarModulosBtn {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.2em;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+/* Estilo do botão de alternância */
+.toggle-container {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
 }
 
 .botão_trocar_sistema {
-    position: absolute;
+    width: 50px;
+    height: 25px;
     background-color: #ccc;
     border-radius: 15px;
-    border: none;
+    position: relative;
     cursor: pointer;
+    border: none;
     outline: none;
     transition: background-color 0.3s ease;
 }
 
 .botão_trocar_sistema::before {
     content: '';
-    position: absolute;
     width: 25px;
     height: 25px;
-    border-radius: 50%;
     background-color: white;
-    top: 2.5px;
-    left: 5px;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
     transition: transform 0.3s ease;
 }
 
-/* Estilo do botão quando estiver no modo 'ligado' */
 .botão_trocar_sistema.active {
     background-color: #4CAF50;
 }
 
 .botão_trocar_sistema.active::before {
-    transform: translateX(30px);
+    transform: translateX(25px);
 }
 
-/* Estilos para o contêiner dos botões */
-.button-container {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    width: 100%;
-    margin-top: 20px; /* Espaçamento acima dos botões */
-}
-
-
-.result-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 30px;
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-}
-
-
-h1, h2 {
+/* Texto ao lado do botão de alternância */
+#toggleText {
+    margin-left: 10px;
+    font-size: 1em;
     color: #333;
-    text-align: center;
-    margin: 0;
-    font-size: 2.5em; /* Aumenta o tamanho do título */
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px 0;
-}
-
-label {
-    font-size: 1.2em; /* Aumenta o tamanho da fonte do rótulo */
-    font-family: 'Roboto', sans-serif;
-}
-
-input[type="text"] {
-    margin: 10px 0;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    width: 100%;
-    max-width: 500px;
-    font-size: 1em;
-}
-
-button {
-    padding: 15px 30px;
-    background: linear-gradient(to bottom, #6200ea, #3700b3);
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1.2em;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
-}
-
-button:hover {
-    background: linear-gradient(to bottom, #3700b3, #6200ea);
-    transform: scale(1.03);
-}
-
-.error-message {
-    color: red;
-    font-size: 1em; /* Aumenta o tamanho da fonte da mensagem de erro */
-}
-
-/* Estilos para a página de resultados */
-.result-container p {
-    margin: 15px 0;
-    color: #666;
-    font-size: 1.1em; /* Aumenta o tamanho da fonte dos dados */
-}
-
-.back-button {
-    display: block;
-    width: 250px;
-    margin: 20px auto;
-    padding: 15px;
-    text-align: center;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    font-size: 1.2em; /* Aumenta o tamanho da fonte do botão de retorno */
-    transition: background-color 0.3s ease; 
-}
-
-.back-button:hover {
-    background-color: #1976D2;
-}
-
-.error-icon {
-    color: red;
-    font-weight: bold;
-}
-
-/* Container principal */
-.result-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-}
-
-/* Estilizando a área de conteúdo dos resultados */
-.result-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/* Estilizando a notificação */
-.notification {
-    padding: 10px;
-    border-radius: 5px;
-    font-weight: bold;
-    font-size: 1.2em;
-}
-
-/* Cores da notificação */
-.on-time {
-    background-color: #69da6d; /* Verde */
-    color: white;
-}
-
-.late {
-    background-color: #FF9800; /* Laranja */
-    color: white;
-}
-
-.very-late {
-    background-color: #F44336; /* Vermelho */
-    color: white;
-}
-
-.blinking {
-    animation: blinkingText 1.2s infinite;
-}
-
-/* Animação para piscar */
-@keyframes blinkingText {
-    0% { opacity: 1; }
-    50% { opacity: 0; }
-    100% { opacity: 1; }
-}
-
-/* Esconde a notificação até que ela seja atualizada */
-.hidden {
-    display: none;
-}
-
-/* Estilizando o botão de voltar */
-.back-button {
-    margin-top: 20px;
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #2196F3;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.back-button:hover {
-    background-color: #1976D2;
-}
-
-.dados-cliente h3 {
-    color: #007bff;
-}
-
-.verificar-envio h3 {
-    color: #28a745;
-}
-
-.verificar-backup h3 {
-    color: #dc3545;
-}
-
-.aviso {
-    background-color: #d1cdfa; /* Cor de fundo do aviso */
-    color: #070202; /* Cor do texto do aviso */
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 12px;
-    text-align: center;
-    font: bold;
-    font-weight: 900;
-}
-
-
+/* Footer centralizado no fim da página */
 footer {
+    background-color: #fff;
+    padding: 10px;
     text-align: center;
-    padding: 8px;
+    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+    width: 100%;
     position: relative;
-    margin-top: auto;
-    width: 100%;
-    font-family: 'Roboto', sans-serif; /* Adiciona a fonte Roboto */
-    font-weight: 300; /* Usa o peso leve da fonte */
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 8px;
-    border-top: 5px solid #444;
-    width: 100%;
-}
-
-footer h3 {
-    margin: 10;
-    font-size: 1em;
-}
-
-.container_footer{
-    width: 50%;
-    max-width: 1200px; /* Largura máxima do conteúdo dentro do rodapé */
-    margin: 0 auto; /* Centraliza o conteúdo do rodapé */
-}
-
-@media (max-width: 768px) {
-    .container, .result-container {
-        width: 95%;
-        padding: 15px;
-    }
-
-    .result-content {
-        flex-direction: column;
-        gap: 15px;
-    }
-
-    .button-container {
-        flex-direction: column;
-    }
 }
