--- a/docs/style.css
+++ b/docs/style.css
@@ -1,6 +1,6 @@
 /* Estilos Globais */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Comfortaa', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -8,6 +8,7 @@ body {
     justify-content: space-between;
     min-height: 100vh; /* Garante que o footer fique sempre no fim */
     background-color: #f4f4f9;
+    overflow: hidden; /* Remove a rolagem */
 }
 
 /* Container centralizado */
@@ -16,17 +17,20 @@ body {
     justify-content: space-around; /* Espaçamento entre a imagem e o formulário */
     align-items: center;
     flex-grow: 1; /* Ocupa o espaço disponível */
-    background-color: #fff;
-    padding: 10px;
+    background: linear-gradient(to right, #ffffff 40%, #ffffff 30%, #9ac0f5);
     border-radius: 12px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    margin: 50px auto;
-    width: 80%;
+    margin: 30px auto;
+    width: 65%;
+    max-width: 1200px; /* Define um limite máximo para o tamanho do container */
+    flex-wrap: wrap; /* Permite que os elementos "quebrem" linha se necessário */
 }
 
 /* Estilo da Imagem */
 .image {
-    width: 20%; /* Ajuste o tamanho da imagem conforme necessário */
+    width: 100%; /* Para garantir que a imagem ocupe 100% da largura disponível em telas menores */
+    max-width: 300px; /* Limita o tamanho da imagem */
+    margin-bottom: 20px; /* Espaçamento entre a imagem e o formulário */
 }
 
 .image img {
@@ -40,13 +44,15 @@ form {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 100%;
+    max-width: 600px; /* Limita o tamanho em telas grandes */
 }
 
 /* Campo de entrada de CNPJ */
 input[type="text"] {
-    width: 300px;
-    padding: 15px;
+    width: 100%; /* 100% da largura disponível */
+    max-width: 300px; /* Limita o tamanho máximo */
+    padding: 10px;
     font-size: 1em;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -55,10 +61,14 @@ input[type="text"] {
 
 /* Botão de consultar */
 button#consultarModulosBtn {
-    background-color: #007bff;
+    width: 100%; /* Botão ocupa a largura disponível */
+    max-width: 200px; /* Limita o tamanho do botão em telas maiores */
+    background-color: #2197f0;
+    font-family: 'Comfortaa', sans-serif;
+    font-weight: 500; /* Comfortaa-Medium */
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     font-size: 1.2em;
     border-radius: 5px;
     cursor: pointer;
@@ -75,7 +85,7 @@ button#consultarModulosBtn {
 .botão_trocar_sistema {
     width: 50px;
     height: 25px;
-    background-color: #ccc;
+    background-color: #2197f0;
     border-radius: 15px;
     position: relative;
     cursor: pointer;
@@ -88,7 +98,8 @@ button#consultarModulosBtn {
     content: '';
     width: 25px;
     height: 25px;
-    background-color: white;
+    background-color: rgb(231, 227, 227);
+    border-color: #333;
     border-radius: 50%;
     position: absolute;
     top: 0;
@@ -108,7 +119,8 @@ button#consultarModulosBtn {
 #toggleText {
     margin-left: 10px;
     font-size: 1em;
-    color: #333;
+    color: #000000;
+    font-weight: 800; /* Comfortaa-Regular */
 }
 
 /* Footer centralizado no fim da página */
@@ -116,7 +128,40 @@ footer {
     background-color: #fff;
     padding: 10px;
     text-align: center;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
     width: 100%;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Isso centraliza o conteúdo horizontalmente */
 }
+
+/* Estilo para a imagem */
+footer .imagem_footer img {
+    height: 20px; /* Ajusta o tamanho da imagem */
+    margin-right: 10px; /* Espaço entre a imagem e o texto */
+}
+
+/* Media Queries para telas menores */
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column; /* Empilha os elementos em vez de colocá-los lado a lado */
+        padding: 10px;
+    }
+
+    input[type="text"] {
+        width: 60%; /* O campo de texto ocupa 100% da largura disponível */
+    }
+
+    button#consultarModulosBtn {
+        width: 100%; /* O botão também ocupa 100% da largura disponível */
+    }
+
+    .image {
+        width: 80%; /* A imagem vai ocupar 80% da largura da tela em telas menores */
+    }
+
+    footer .imagem_footer img {
+        margin-bottom: 14px;
+    }
+}
+
