--- a/docs/style.css
+++ b/docs/style.css
@@ -5,9 +5,11 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center; /* Centraliza verticalmente os elementos */
     min-height: 100vh; /* Garante que o footer fique sempre no fim */
-    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0 );
+    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0);
+    background-size: cover;
+    overflow: hidden;
 }
 
 /* Container centralizado */
@@ -15,20 +17,20 @@ body {
     display: flex;
     justify-content: space-around; /* Espaçamento entre a imagem e o formulário */
     align-items: center;
-    flex-grow: 1; /* Ocupa o espaço disponível */
     background: white;
     border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 5);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     margin: 30px auto;
     width: 65%;
-    max-width: 1200px; /* Define um limite máximo para o tamanho do container */
-    flex-wrap: wrap; /* Permite que os elementos "quebrem" linha se necessário */
+    padding: 20px;
+    flex-grow: 1;
+    box-sizing: border-box;
 }
 
 /* Estilo da Imagem */
 .image {
     width: 100%; /* Para garantir que a imagem ocupe 100% da largura disponível em telas menores */
-    max-width: 300px; /* Limita o tamanho da imagem */
+    max-width: 400px; /* Limita o tamanho da imagem */
     margin-bottom: 20px; /* Espaçamento entre a imagem e o formulário */
 }
 
@@ -181,22 +183,25 @@ footer .imagem_footer img {
     .container {
         flex-direction: column; /* Empilha os elementos em vez de colocá-los lado a lado */
         padding: 10px;
+        width: 80%; /* Garante que o container ocupe 100% da largura da tela */
+        box-sizing: border-box; /* Impede que o padding aumente o tamanho do container */
     }
 
     input[type="text"] {
-        width: 60%; /* O campo de texto ocupa 100% da largura disponível */
+        width: 70%; /* O campo de texto ocupa 100% da largura disponível */
+        box-sizing: border-box; /* Garante que o padding não ultrapasse a largura */
     }
 
     button#consultarModulosBtn {
-        width: 100%; /* O botão também ocupa 100% da largura disponível */
+        width: 70%; /* O botão também ocupa 100% da largura disponível */
+        box-sizing: border-box; /* Garante que o padding não ultrapasse a largura */
     }
 
     .image {
-        width: 80%; /* A imagem vai ocupar 80% da largura da tela em telas menores */
+        width: 80%; /* A imagem vai ocupar 100% da largura da tela em telas menores */
     }
 
     footer .imagem_footer img {
         margin-bottom: 14px;
     }
 }
-
