--- a/docs/style.css
+++ b/docs/style.css
@@ -6,30 +6,29 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center; /* Centraliza verticalmente os elementos */
-    min-height: 100vh; /* Garante que o footer fique sempre no fim */
     background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0);
     background-size: cover;
-    overflow: hidden;
 }
 
 /* Container centralizado */
 .container {
     display: flex;
-    justify-content: space-around; /* Espaçamento entre a imagem e o formulário */
+    gap: 3%;
     align-items: center;
     background: white;
-    border-radius: 12px;
+    margin: 0 auto;
+    margin-top: 7%;
+    border-radius: 30px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    margin: 30px auto;
-    width: 65%;
-    padding: 20px;
-    flex-grow: 1;
+    max-width: 70%;
+    width: 900px;
+    padding: 4% 5% 3% 5%;
     box-sizing: border-box;
 }
 
 /* Estilo da Imagem */
 .image {
-    width: 100%; /* Para garantir que a imagem ocupe 100% da largura disponível em telas menores */
+    width: 80%; /* Para garantir que a imagem ocupe 100% da largura disponível em telas menores */
     max-width: 250px; /* Limita o tamanho da imagem */
     margin-bottom: 20px; /* Espaçamento entre a imagem e o formulário */
 }
@@ -47,11 +46,13 @@ form {
     align-items: center;
     width: 100%;
     max-width: 600px; /* Limita o tamanho em telas grandes */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    padding: 4%;
 }
 
 /* Campo de entrada de CNPJ */
 input[type="text"] {
-    width: 100%; /* 100% da largura disponível */
+    width: 70%; /* 100% da largura disponível */
     max-width: 300px; /* Limita o tamanho máximo */
     padding: 10px;
     font-size: 1em;
@@ -63,7 +64,7 @@ input[type="text"] {
 /* Botão de consultar */
 button#consultarModulosBtn {
     width: 100%; /* Botão ocupa a largura disponível */
-    max-width: 200px; /* Limita o tamanho do botão em telas maiores */
+    max-width: 150px; /* Limita o tamanho do botão em telas maiores */
     background-color: #2197f0;
     font-family: 'Comfortaa', sans-serif;
     font-weight: 500; /* Comfortaa-Medium */
@@ -73,7 +74,6 @@ button#consultarModulosBtn {
     font-size: 1.2em;
     border-radius: 5px;
     cursor: pointer;
-    margin-bottom: 20px;
 }
 
 button#consultarModulosBtn:hover {
@@ -93,6 +93,7 @@ button#consultarModulosBtn:hover {
     height: 25px;
     background-color: #2197f0;
     border-radius: 12px;
+    margin-bottom: 3%;
     border:none;
     position: relative;
     cursor: pointer;
@@ -129,6 +130,7 @@ button#consultarModulosBtn:hover {
 /* Texto ao lado do botão de alternância */
 #toggleText {
     margin-left: 10px;
+    margin-bottom: 3%;
     font-size: 1em;
     color: #000000;
     font-weight: 800; /* Comfortaa-Regular */
@@ -166,7 +168,9 @@ footer {
     padding: 10px;
     text-align: center;
     width: 100%;
-    position: relative;
+    position: fixed;
+    bottom: 0;
+    left: 0;
     display: flex;
     align-items: center;
     justify-content: center; /* Isso centraliza o conteúdo horizontalmente */
@@ -188,6 +192,17 @@ footer .imagem_footer img {
         box-sizing: border-box; /* Impede que o padding aumente o tamanho do container */
     }
 
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 75%;
+        max-width: 600px; /* Limita o tamanho em telas grandes */
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        padding: 4%;
+    }
+
     input[type="text"] {
         width: 70%; /* O campo de texto ocupa 100% da largura disponível */
         box-sizing: border-box; /* Garante que o padding não ultrapasse a largura */
@@ -204,5 +219,9 @@ footer .imagem_footer img {
 
     footer .imagem_footer img {
         margin-bottom: 14px;
+        position: relative;
+        bottom: 0;
+        left: 0;
+
     }
 }
