Ajuste layout index, arredondamento form

--- a/docs/style.css
+++ b/docs/style.css
@@ -48,6 +48,7 @@ form {
     max-width: 600px; /* Limita o tamanho em telas grandes */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     padding: 4%;
+    border-radius: 20px;
 }
 
 /* Campo de entrada de CNPJ */
