--- a/docs/resultado_BKP.css
+++ b/docs/resultado_BKP.css
@@ -110,7 +110,7 @@ footer {
     padding: 10px;
     text-align: center;
     width: 100%;
-    position: relative;
+    position: fixed;
     bottom: 0;
     left: 0;
     display: flex;
