--- a/docs/resultado_BKP.css
+++ b/docs/resultado_BKP.css
@@ -1,14 +1,11 @@
 /* Estilos gerais para o resultado.html */
 body {
     font-family: 'Comfortaa', sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0 );
-    color:#333;
-    overflow: auto;
+    background-image: url('assets/ImagemBackground/teste.jpg');
+    background-size: cover; /* A imagem cobre toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-attachment: fixed; /* A imagem de fundo fica fixa ao rolar a página */
 }
 
 h1 {
@@ -37,15 +34,15 @@ p {
     flex-direction: column;
     justify-content: center;
     width: 60%;
-    margin: 0 auto;
+    margin: auto;
+    margin-top: 120px;
     padding: 20px;
     box-sizing: border-box;
 }
 
 /* Contêiner para as seções lado a lado */
 .sections-container {
-    display: flex;
-    justify-content: space-between;
+    display: flex;  
     gap: 15px;
     margin-bottom: 15px;
 }
@@ -75,7 +72,7 @@ p {
 .detalhes {
     display: flex;           /* Mantém os detalhes em linha */
     justify-content: center; /* Centraliza os detalhes */
-    gap: 10vh;              /* Espaçamento entre os elementos */
+    gap: 10vh;
 }
 
 /* Estilo para a seção "VERIFICAR BACKUP" */
@@ -110,7 +107,7 @@ footer {
     padding: 10px;
     text-align: center;
     width: 100%;
-    position: fixed;
+    position: relative;
     bottom: 0;
     left: 0;
     display: flex;
@@ -235,13 +232,6 @@ footer .imagem_footer img {
         padding: 8px;
     }
 
-    .notification {
-        position: static; /* Remove o posicionamento absoluto para centralizar melhor */
-        margin: 10px auto; /* Centraliza a notificação no meio */
-        width: 60px;
-        height: 60px;
-        font-size: 10px; /* Reduz o tamanho da fonte */
-    }
 
     .back-button, #exibeModulos {
         width: 100%; /* Garante que os botões ocupem toda a largura em telas pequenas */
