--- a/docs/style.css
+++ b/docs/style.css
@@ -6,18 +6,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center; /* Centraliza verticalmente os elementos */
-    background: linear-gradient(to left, #acc5e0, #dbe2eb, #acc5e0);
-    background-size: cover;
+    background-image: url('assets/ImagemBackground/teste.jpg');
+    background-size: cover; /* A imagem cobre toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-attachment: fixed; /* A imagem de fundo fica fixa ao rolar a página */
 }
 
 /* Container centralizado */
 .container {
-    background-color: white;
     display: flex;
     gap: 3%;
     align-items: center;
     margin: 0 auto;
-    margin-top: 7%;
+    margin-top: 200px;
     border-radius: 30px;
     max-width: 70%;
     width: 700px;
@@ -169,9 +171,7 @@ footer {
     padding: 10px;
     text-align: center;
     width: 100%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center; /* Isso centraliza o conteúdo horizontalmente */
